--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Victor Idongesit",
   "license": "ISC",
   "dependencies": {
+    "@babel/register": "^7.10.5",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
