--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "An Acklen Avenue Assessment Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d dist",
-    "start": "npm run build && node dist",
-    "restart": "rimraf dist && npm run start",
-    "dev": "nodemon --exec npm run restart"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "Acklen",
