--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@babel/core": "^7.11.1",
     "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.0",
     "@babel/register": "^7.10.5",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -31,8 +32,6 @@
     "sequelize": "^6.3.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/preset-env": "^7.11.0",
-    "rimraff": "0.0.1-security"
+    "@babel/cli": "^7.10.5"
   }
 }
