--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.11",
     "pg": "^8.3.2",
     "pg-hstore": "^2.3.3",
+    "regenerator-runtime": "^0.13.7",
     "rimraf": "^3.0.2",
     "sequelize": "^6.3.4"
   },
